--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,739 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@font-face {
+  font-family: 'Neue-Bold';
+  src: url('../../public/Fonts/ppneuemontreal-bold.otf') format('woff2');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+@font-face {
+  font-family: 'Neue-Regular';
+  src: url('../../public/Fonts/ppneuemontreal-book.otf') format('woff2');
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+@font-face {
+  font-family: 'Neue-Medium';
+  src: url('../../public/Fonts/ppneuemontreal-medium.otf') format('woff2');
+}
+
+@font-face {
+  font-family: 'Neue-Light';
+  src: url('../../public/Fonts/ppneuemontreal-thin.otf') format('woff2');
+}
+
+html{
+  background-color: white;
+
+}
+body{
+  margin: 0;
+  background-color: white;
+  z-index: 10;
+}
+
+.hero-main{
+  width: 100%;
+  height: 90vh;
+  background-color: white;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-div{
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loaded-name{
+  font-family: 'Neue-Medium';
+  font-weight: 400;
+  font-style: normal;
+  font-size: clamp(4.5rem, 3.1883rem + 7.7729vw, 15.625rem);
+
+  display: inline-block;
+    position: relative;
+    margin: 0;
+}
+
+
+.loaded-name span {
+  display: inline-block;
+  position: relative;
+  transform: translateY(0%);
+}
+
+
+.after-loaded-name{
+  font-family: 'Neue-Medium';
+  font-weight: 400;
+  font-style: normal;
+  font-size: clamp(4.5rem, 3.1883rem + 7.7729vw, 15.625rem);
+
+  display: inline-block;
+    position: relative;
+    margin: 0;
+    color: white;
+}
+
+
+.after-loaded-name span {
+  display: inline-block;
+  position: relative;
+  
+}
+
+.loaded-name-wrapper{
+  overflow: hidden;
+}
+
+.hero-img-holder{
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.hero-img-wrapper{
+  width: 0%;
+  height: 80%;
+  overflow: hidden; /* Ensures any overflow is hidden */
+  position: relative; 
+
+}
+
+.hero-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the entire div */
+  object-position: center; 
+  transform: scale(1);
+  
+}
+
+.desktop{
+  display: block;
+}
+
+.mobile{
+  display: none;
+}
+
+
+.afterload-name-wrapper {
+  z-index: 2;
+  justify-content: flex-start;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  padding-left: 3rem;
+  padding-bottom: 3rem;
+  display: flex;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+
+.tmp{
+  height: 100vh;
+}
+
+.stats-main{
+  padding-top: 7rem;
+}
+
+.stats-wrapper{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+}
+
+.stats-left{
+  width: 50%;
+}
+
+.stats-right{
+  width: 50%;
+}
+
+.message{
+  font-family: 'Neue-Regular';
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  font-size: 24px;
+  line-height: 1.3em;
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.orange{
+  color: #f06e00;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.message-wrapper{
+  max-width: 20rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.info-header{
+  font-family: 'Neue-Regular';
+  font-weight: 600;
+  font-style: normal;
+  color: black;
+  font-size: 60px;
+  line-height: 1.1em;
+  margin: 0;
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.mtb{
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.mt{
+  margin-top: 1rem;
+
+}
+
+.line{
+  width: 100%;
+  height: 1px;
+  background-color: #999;
+}
+
+.stats-table{
+  margin-top: 3rem;
+}
+
+.stat-row{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+}
+
+.stat-left{
+  font-family: 'Neue-Regular';
+  font-weight: 400;
+  font-style: normal;
+  color: #999;
+  font-size: 18px;
+}
+
+.stat-right{
+  font-family: 'Neue-Regular';
+  font-weight: 400;
+  font-style: normal;
+  color: #999;
+  font-size: 18px;
+
+}
+
+.op0{
+  opacity: 0;
+}
+
+.hiddenw{
+  overflow: hidden;
+}
+
+.res-now-row{
+  display: flex;
+  margin-top: 4rem;
+  cursor: pointer;
+}
+
+.res-p{
+  font-family: 'Neue-Medium';
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 18px;
+
+}
+
+.res-p:hover{
+  
+  color: #F06E00;
+}
+
+.arrow-r{
+  margin-left: 2px;
+  transition: all 0.3s ease;
+}
+
+.res-now-row:hover .arrow-r{
+  margin-left: 12px;
+}
+
+.grid-main{
+  padding-top: 7rem;
+}
+
+.grid-wrapper{
+  width: 80%;
+  margin: 0 auto;
+}
+
+
+.bento-grid{
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+}
+
+.w-layout-grid{
+  grid-row-gap: 16px;
+    grid-column-gap: 16px;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    display: grid;
+}
+
+.bento-item{
+    position: relative;
+    overflow: hidden;
+}
+
+.item1{
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.item2{
+  grid-area: 1 / 2 / 2 / 4;
+}
+
+.item3{
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.item4{
+  grid-area: 2 / 3 / 4 / 4;
+}
+
+.item5{
+  grid-area: 3 / 1 / 4 / 2;
+}
+
+.item6{
+  grid-area: 3 / 2 / 4 / 3;
+}
+
+.bento-img{
+  z-index: 1;
+    object-fit: cover;
+    width: 100%;
+    position: relative;
+    height: 25rem;
+
+}
+
+.higher{
+  height: calc(50rem + 20px);
+
+}
+
+.descriptions-under{
+  display: flex;
+  padding-top: 7rem;
+}
+
+.desc-left{
+  width: 40%;
+}
+
+.desc-righr{
+  width: 50%;
+}
+
+.food-main{
+  padding-top: 7rem;
+}
+
+.food-wrapper{
+  width: 100%;
+}
+
+.food-img{
+  width: 100%;
+}
+
+.this-swiper{
+  transform: translateX(30%);
+  cursor: grab;
+}
+
+.food-wrapper{
+  overflow: hidden;
+}
+
+.vizija-main{
+  padding-top: 7rem;
+}
+
+.vizija-wrapper{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.paragraphs-row{
+  display: flex;
+}
+
+.paragraphs-left{
+  width: 40%;
+}
+
+.paragraphs-right{
+  width: 40%;
+  margin-left: 3rem;
+}
+
+.sticky-main{
+  padding-top: 7rem;
+}
+
+.sticky-wrapper{
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.panel {
+  height: 100vh;
+  width: 100%;
+  position: sticky;
+  top: 0;
+}
+
+.hill-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.res-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.rezervacija-row {
+  display: flex;
+  width: 100%;
+  padding-top: 7rem;
+  gap: 1rem; /* Add a 1 rem gap between the cells */
+
+}
+
+.rezervacija-cell {
+  flex: 1;
+  overflow: hidden;
+  transition: flex 0.9s ease;
+  cursor: pointer;
+  position: relative;
+  height: 40vh; /* Set a fixed height to prevent growth in height on hover */
+
+}
+
+.rezervacija-cell:hover {
+  flex: 1.5; /* Increase the flex value to make the cell wider on hover */
+}
+
+.za-p{
+  z-index: 3;
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  font-family: 'Neue-Medium';
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+  font-size: 48px;
+  line-height: 1.3em;
+  margin: 0;
+}
+
+
+.reservations{
+  z-index: 10;
+}
+
+.footer-main{
+  padding-top: 7rem;
+  
+
+}
+
+.footer-wrapper{
+  width: 100%;
+  height: 30vh;
+  background-color: #f06e00;
+}
+
+.thisstupis{
+  
+  z-index: 10;
+  margin-bottom: 400px;
+  position: relative;
+  background-color: white;
+}
+
+footer {
+  width: 100%;
+  height: 400px;
+  background: #F06E00;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0px;
+  z-index: 0;
+}
+
+.footer-main{
+  width: 100%;
+  height: 400px;
+  background-color: #F06E00;
+}
+
+.resser{
+  z-index: 10;
+
+}
+
+.footer-sec{
+  width: 100%;
+  height: 400px;
+  z-index: 0;
+  padding: 2rem;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+.reservations{
+  padding-bottom: 7rem;
+}
+
+.first-col{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.rights{
+  font-family: 'Neue-Regular';
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+  font-size: 16px;
+  line-height: 1.3em;
+}
+
+.socials{
+  margin-right: 64px;
+}
+
+@media (max-width: 1000px) {
+  .footer-main{
+    padding-top: 4rem;
   }
+
+  .socials{
+    margin-right: 0px;
+  }
+  
+
+  
+  .sticky-main{
+    padding-top: 3rem;
+  }
+
+  .za-p{
+    z-index: 3;
+    position: absolute;
+    left: 8px;
+    bottom: 8px;
+    font-family: 'Neue-Medium';
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    font-size: 24px;
+    line-height: 1.3em;
+    margin: 0;
+  }
+  
+
+  .rezervacija-row {
+    display: flex;
+    width: 100%;
+    padding-top: 4rem;
+    flex-direction: column;
+  }
+  
+  .paragraphs-row{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .paragraphs-left{
+    width: 100%;
+  }
+  
+  .paragraphs-right{
+    width: 100%;
+    margin-left: 0rem;
+
+  }
+  .vizija-wrapper{
+    width: 90%;
+  }
+  .vizija-main{
+    padding-top: 4rem;
+  }
+  .food-main{
+    padding-top: 4rem;
+  }
+
+  
+  .desc-left{
+    width: 100%;
+    display: none;
+  }
+  
+  .desc-righr{
+    width: 100%;
+  }
+
+  
+  .descriptions-under{
+    display: flex;
+    padding-top: 4rem;
+    flex-direction: column;
+  }
+
+  .bento-grid{
+    flex-flow: column;
+        display: flex;
+
+  }
+
+  
+  .grid-wrapper{
+    width: 90%;
+    margin: 0 auto;
+  }
+  .grid-main{
+    padding-top: 4rem;
+  }
+  
+  .res-now-row{
+    
+    margin-top: 2.5rem;
+  }
+  
+  .stat-left{
+    font-family: 'Neue-Regular';
+    font-weight: 400;
+    font-style: normal;
+    color: #999;
+    font-size: 16px;
+  }
+  
+  .stat-right{
+    font-family: 'Neue-Regular';
+    font-weight: 400;
+    font-style: normal;
+    color: #999;
+    font-size: 16px;
+  
+  }
+
+  .res-p{
+    
+    font-size: 16px;
+  
+  }
+  
+  
+  .stats-table{
+    margin-top: 2rem;
+  }
+  
+  .info-header{
+    
+    font-size: 48px;
+    
+  }
+
+  .message{
+    
+    font-size: 21px;
+  
+  }
+  
+  .desktop{
+    display: none;
+  }
+  
+  .mobile{
+    display: block;
+  }
+
+  .hero-img-holder{
+    height: 70vh;
+    margin-top: 48px;
+
+  }
+
+  .hero-main{
+    height: 70vh;
+    margin-top: 48px;
+
+  }
+  
+
+  .stats-main{
+    padding-top: 4rem;
+}
+
+.stats-wrapper{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.stats-left{
+  width: 100%;
+}
+
+.stats-right{
+  width: 100%;
+}
 }
