--- a/public/Components/Navbar/Navbar.css
+++ b/public/Components/Navbar/Navbar.css
@@ -142,7 +142,7 @@
 .navigations-column {
   display: flex;
   flex-direction: column;
-  gap: 0rem;
+  gap: 0.5rem;
 }
 
 .navigation-wrapper {
@@ -151,7 +151,7 @@
 }
 
 .navigation {
-  font-size: 60px;
+  font-size: 40px;
   font-family: "Neue-Regular";
   font-weight: 400;
   font-style: normal;
@@ -163,6 +163,10 @@
 
 .navigation:hover {
   color: #f06e00;
+}
+
+.navigation-link {
+  text-decoration: none;
 }
 
 @media (max-width: 1000px) {
@@ -184,14 +188,17 @@
   }
 
   .navigation {
-    font-size: 48px;
+    font-size: 32px;
     font-family: "Neue-Regular";
     font-weight: 400;
     font-style: normal;
     color: black;
+    margin-bottom: 8px;
   }
 
   .navigations-column {
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
   }
 }
