--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -711,6 +711,14 @@ footer {
   gap: 12px;
 }
 
+.gap-4 {
+  gap: 64px;
+}
+
+.gap-16 {
+  gap: 16px;
+}
+
 .ml-2 {
   margin-left: 8px;
 }
@@ -859,6 +867,23 @@ footer {
   width: 100%;
   height: 60px;
   background-color: white;
+}
+
+.flexx {
+  display: flex;
+  flex-direction: row;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.break-inside-avoid {
+  break-inside: avoid;
 }
 
 @media (max-width: 1000px) {
@@ -1037,13 +1062,32 @@ footer {
   order: 1;
 }
 
+.test18 {
+  column-gap: 32px;
+  columns: 3;
+}
+
 @media (max-width: 992px) {
   .pb16 {
     padding-bottom: 6rem;
   }
+
+  .test18 {
+    column-gap: 32px;
+    columns: 2;
+  }
 }
 
 @media (max-width: 768px) {
+  .test18 {
+    column-gap: 32px;
+    columns: 1;
+  }
+
+  .flexx {
+    display: flex;
+    flex-direction: column;
+  }
   .order-reverse {
     order: 2;
   }
@@ -1103,5 +1147,9 @@ footer {
 
   .bigger-text {
     font-size: 40px;
+  }
+
+  .gap-4 {
+    gap: 24px;
   }
 }
